# LOLRMM

./: pyproject.toml
detections/kql/: generic_rmm_detection.yml
website/: package-lock.json  package.json
yaml/: dev_tunnels_(aka_visual_studio_dev_tunnel).yaml  logmein.yaml  supremo.yaml
